# pyfabdb

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  requirements-dev.txt  setup.cfg  tox.ini
.github/: PULL_REQUEST_TEMPLATE
.github/workflows/: test.yml
fab/: client.py  util.py
pyfab/: client.py  pyfab.py  util.py
pyfabdb/: client.py  pyfabdb.py  util.py
tests/: card_test.py  cards_test.py  client_test.py  decks_test.py  util_test.py
