[metadata]
name = pyfabdb
version = 0.1.0
description = A Python Library for Flesh and Blood DB API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GonzalezAndrew/pyfabdb
author = Andrew Gonzalez
author_email = andrewgonzo23@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    certifi==2021.5.30
    charset-normalizer==2.0.4
    idna==3.2
    requests==2.26.0
    urllib3==1.26.6
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-tests.*]
disallow_untyped_defs = false
